[package]
name = "taml"
version = "0.0.1"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "A kind-to-humans configuration language"
license = "MPL-2.0"
repository = "https://github.com/Tamschi/taml"
readme = "README.md"
include = [
	"**/*.rs",
	"Cargo.toml",
]

[dependencies]
cervine = "0.0.2"
debugless-unwrap = "0.0.1"
enum_properties = "0.2.1"
gnaw = "0.0.1"
indexmap = "1.5.0"
lazy-transform-str = "0.0.1"
logos = "0.11.4"
smartstring = "0.2.3"
try_match = "0.2.2"
